--- a/package.xml
+++ b/package.xml
@@ -9,8 +9,10 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>hardware_interface</build_depend>
 
   <run_depend>roscpp</run_depend>
+  <run_depend>hardware_interface</run_depend>
 
   <export>
   </export>
